crates/redline-model/src/snapshots/redline_model__sections__tests__snapshot_real_repo_status_tree.snap
---
source: src/sections.rs
assertion_line: 806
expression: rows
---
[
    "Branch | ## main",
    "Group | Staged changes",
    "File |   M app.rs (+3 -1)",
    "Group | Unstaged changes",
    "Group | Untracked files",
    "File |   ? scratch.txt",
]
